--- a/Executables/OrbisConsoleOutput/OrbisConsoleOutput.resx
+++ b/Executables/OrbisConsoleOutput/OrbisConsoleOutput.resx
@@ -139,30 +139,46 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="CurrentProc.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="Settings_DropDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHtSURBVDhPrZLLaxNhFMVjG9vGgBv7gq58QrJyqWKWhbZQ
-        6Ea6sBYXEgQVFPci4n8gtYLLVNyUYhZC+g8USqHQraVKS/oIPjIyEydmXv7O129Ei7jqgcO937nn3u8x
-        kxGSJOmC1+M4vmYEQH4erUy8CXNW/jcwDMGrsADzNJ4kPiImvu83CZdhFm2A2G/bDoGYgxfhWBRFb4kP
-        MN0grxKTer1OGj0jnSLOwxd4CqxPpAMGWZyjsNRoNH6Cg06ns+26rqcBQrvd/hwEwSerOXifE0+ZASkY
-        dJ/jfjUdFgzbO6qFYbiOd4K0y7aa5jycZJctmTiBzv0SbZZlmXy52Wz6qpG/Qz9Lmk2biyyeUlhstVrf
-        Hcf5YZtHjAGQl9h5VQO0CfU5tIdp8Z4KKdh9F23aFP8ATa+sxYDHDU0B84znea521ovzYF+ol03RgnWW
-        ARXbGOgxOcmmKTLgDByFT/QFNBlzjXXJ1nvh3fR9dBXWt+AVMyAFwjimjzLpNBhXGPQaLkhncKwa6yre
-        3+9jgDBI4Y3+A5n+B30h/Hq3Httu7jjMgApX2GfnNfIaxh3TAfTt0d7r3vADA/S39tn2QyBego/hGCzS
-        YF5dRwe6s373O0i3iadt29/QVNitXE38hd/YfYP8gq33iMqPCZnMLx42k3Sd+a3jAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHuSURBVDhPrZLNS1RhFMYnnfxIaJNNgisrg5lVywpnGUyC
+        4EZcaNEiBsGCon1E9B+EGbicok2IsxDGf0CQIHCrWIxoNfRxr9w7zTT3q9/z+t4oiVY+8HDO+5znnPfj
+        3oyQJEkXHIvj+JoRAPkFtDJxBvZb+d/AcA5ehXk4QONJ4gNi0mq1HMJlmEU7Sxy0bYdA7IejsBRF0Wvi
+        PUxT5FViUq/XSaMnpJPERfgMT571iXRAjsV5CsuNRuMn+NzpdOqe5/kaILTb7S9BEHywmov3KfGUGZCC
+        QXc57jfTYcGwj0e1MAzf4R0n7bKtpnkATrDLjkycYI9dnqPdYlkmX3Mcp6Ua+Qr6CGk2bS6weEzhTbPZ
+        PHBd94dtHjYGQF5k5w0N0CbUF9Dup8V5FVKw+z7atCn+AZpeWIsBjxuaAuZZ3/c97awX58G+Ui+bogXr
+        LAMqtjHQY3KSbVNkwBl4HT7SF9BkzDXWRVvvhXPp++gqrG/CK2ZACoQbmN7LpNNgXGfQEnwpncGxaqyr
+        eH+/jwFCjsIr/Qcy/Q/6Qvj1bj223dxxiAEVrvCJnd+S1zDumg6gb4+2qnvDLQbob+2z7YdAvAQfwhIs
+        0GBeXUcHurN+9ztIt4mnbdvf0FTYrVxN/IXf2X2T/KKt94jKjwmZzC+pQpM1htEo8AAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="Button_Attach.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFqSURBVDhPjZO9SsNgFIYzeAcK4lLQQfBnUFRwUBD8BUcX
-        cXVQHMXBRXAXUXD1AnR08gr8QQpegoIWLChmsk3TND7ny2tsTK0+cEjO+77n5EtDvUaj0RnH8UwURWdB
+        cXVQHMXBRXAXUXD1AnR08gr8QQpeglIdLChmsk3TND7ny2tsTK0+cEjO+77n5EtDvUaj0RnH8UwURWdB
         ELzQL9KPeP+FgSEGMrDsSPbfED63IRbtUNPlcjmo1+v33I8q0p5qtfqqBQPWVyqVt1KpFNIvuABg91EF
         tVkw5myBwfC7XTnVsWx7xW7TWBpJykJgkIFDMr6GD6hT6hJvGWnfdIN+i1rlFW+4TmhFAkIvtWT3BK41
         8ytk7txgK1g0q5yD8C2XYtIlkBlWPAveGLXrUkBwQ5Z5za+zmVuCbr92Ck++kpVSq9UeZTskJ9AXEjml
         KCuFBU/yYt/3PyR/g17gaOtJxB11T3oHX+YkUZ2+QvW4oZ+YqZwjDMMHnvys9ospxfO0COewL6N4Hk4w
-        znEvuE5S25qxY69R8/L6FW8Pc12Ub/8ZSU143idfNxT9oazDGgAAAABJRU5ErkJggg==
+        znEvuE5S25qxY69R8/L6FW8Pc12Ub/8ZSU143icoVhTrq8wZEAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="Button_Detach.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
